syntax = "proto3";

option csharp_namespace = "MicroserviceSample.PlatformService";

service GrpcPlatform {
  rpc GetAllPlatforms (GetAllRequest) returns (GetAllResponse);
}

message GetAllRequest { }

message GrpcPlatformModel {
  int32 platformId = 1;
  string name = 2;
  string publisher = 3;
  string cost = 4;
}

message GetAllResponse {
  repeated GrpcPlatformModel platforms = 1;
}
